--- a/content/post/2017-04-06-munging-contiguous-data-to-wide-format.Rmd
+++ b/content/post/2017-04-06-munging-contiguous-data-to-wide-format.Rmd
@@ -3,7 +3,8 @@ title: Munging Contiguous Data to Wide Format
 author: Robert A. Amezquita
 date: '2017-04-06'
 slug: ''
-categories: []
+categories:
+  - rstats
 tags: []
 description: ''
 featured: ''
