--- a/content/post/2017-04-17-analysis-in-practice-part-1-cleanup.Rmd
+++ b/content/post/2017-04-17-analysis-in-practice-part-1-cleanup.Rmd
@@ -3,7 +3,8 @@ title: Analysis in Practice Part 1 - Cleanup
 author: Robert A. Amezquita
 date: '2017-04-17'
 slug: ''
-categories: []
+categories:
+  - rstats
 tags: []
 description: ''
 featured: ''
